--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
 <head><title>Test de git</title></head>
 <body>
-<h1>Esta es una prueba</h1>
-  ssdijsmoifwndoingiaondodfnaerio
+<h1>Lista de películas</h1>
+  <ul>
+    <li>Super Mario Bross</li>
+    <li>Oppenheimer</li>
+    <li>Barbie</li>
+  </ul>
 </body>
 </html>
