--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <body>
 <h1>Lista de películas</h1>
   <ul>
-    <li>Super Mario Bross</li>
-    <li>Oppenheimer</li>
-    <li>Barbie</li>
-    <li>Spiderman</li>
+    <li>Fast & Furious 10</li>
+    <li>Y si quieres...</li>
   </ul>
 </body>
 </html>
