Revert "Fix list"

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <body>
 <h1>Lista de películas</h1>
   <ul>
-    <li>Fast & Furious 10</li>
-    <li>Y si quieres...</li>
+    <li>Super Mario Bross</li>
+    <li>Oppenheimer</li>
+    <li>Barbie</li>
+    <li>Spiderman</li>
   </ul>
 </body>
 </html>
