--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Test de git</title></head>
 <body>
-<h1>Lista de películas del año pasado</h1>
+<h1>Lista de películas perronas</h1>
   <ul>
     <li>Super Mario Bross</li>
     <li>Oppenheimer</li>
